--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -42,7 +42,7 @@
 </div> -->
 
 <!-- 
-<div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount with coupon</p></div></div> 
+<div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
 
 <p>run out of stock soon</p>
 -->
