--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -441,7 +441,7 @@
 
   <div class="wrap">
     <div class="show_more_wrapper clearfix">
-      <div class="show_more_box">
+      <div class="show_more_box clearfix">
         <h2>More Featured</h2>
         <% @related.each do |recommend| %>
           <div class="show_more_ctn">
