--- a/app/views/recommends/_body.html.erb
+++ b/app/views/recommends/_body.html.erb
@@ -1,32 +1,33 @@
+<!-- <div class="filter-node promotion_box" data-filter='["Categories","Products_Title"]'>
+  <div class="image_box"><a href="/guides/Guide_Link"><img src="Image_URL" alt=""></a></div>
+  <div class="node-box inner">
+    <h2><a href="/guides/Guide_Link">Products_Title</a></h2>
+    <span>Last Updated: Mon. Day. 2019</span>
+  </div>
+  <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
+</div> -->
+
 <% @recommends.each do |recommend| %>
-  <div class="filter-node" data-filter='["<%= recommend.re_filter %>"]'>
-    <div class="inner">
-      <%= link_to (image_tag recommend.re_image), recommend %>
-      <em><%= recommend.re_filter %></em>
-      <h3><%= link_to recommend.re_title, recommend %></h3>
-      <p><%= link_to recommend.re_intro, recommend %></p>
-    </div>
-    <% if can? :update, recommend %>
-      <div class="btn clearfix admin">
-        <em><%= link_to "Edit", edit_recommend_path(recommend) %></em><%= link_to "Delete", recommend_path(recommend), method: :delete, data: {confirm: "Are you sure?"}%>
-      </div>    
+ <div class="filter-node promotion_box" data-filter='["<%= recommend.re_filter %>","<%= recommend.re_title %>"]'>
+  <div class="image_box"><%= link_to (image_tag recommend.re_image), recommend %></div>
+  <div class="node-box inner">
+    <h2><%= link_to recommend.re_title, recommend %></h2>
+    <p><%= link_to recommend.re_intro, recommend %></p>
+    <!-- <span>Last Updated: <%= recommend.sub_number_01 %></span> -->
+  </div>
+  <!-- <div class="btn"><a href="/guides/Guide_Link">Read More</a></div> -->
+  <% if can? :update, recommend %>
+    <div class="btn clearfix admin">
+      <em><%= link_to "Edit", edit_recommend_path(recommend) %></em><%= link_to "Delete", recommend_path(recommend), method: :delete, data: {confirm: "Are you sure?"}%>
+    </div>    
+    <% if user_signed_in? %>
+     <li><%= link_to "Log out", destroy_user_session_path, method: :delete, :class => "filter-button"%></li>
     <% end %>
     <% if can? :update, recommend %>
       <div class="pinterest">
        <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
       </div>
-    <% end %>   
-  </div>
+    <% end %>
+  <% end %>  
+ </div> 
 <% end %>
-
-<!-- <div class="filter-node" data-filter='["travel"]'>
-  <div class="inner">
-    <a href="/featured/featured_01"><img src="https://i.pinimg.com/564x/4c/14/ae/4c14ae6547540a6dc4d51d5061c4d731.jpg" alt="" /></a>
-    <em>Travel</em>
-      <a href="/featured/featured_01">
-      <h3>Comfortable Travel Pillow(Part.1)</h3>
-      <p>I`d like to share 10 Comfortable “Travel Pillow” that will make you have a sweet dream while you traveling today.</p>
-      </a>
-  </div>
-</div>
-
