--- a/app/views/recommends/_body.html.erb
+++ b/app/views/recommends/_body.html.erb
@@ -12,7 +12,7 @@
   <div class="image_box"><%= link_to (image_tag recommend.re_image), recommend %></div>
   <div class="node-box inner">
     <h2><%= link_to recommend.re_title, recommend %></h2>
-    <p><%= link_to recommend.re_intro, recommend %></p>
+    <!-- <p><%= link_to recommend.re_intro, recommend %></p> -->
     <!-- <span>Last Updated: <%= recommend.sub_number_01 %></span> -->
   </div>
   <!-- <div class="btn"><a href="/guides/Guide_Link">Read More</a></div> -->
