--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -13,6 +13,14 @@
 
     <div class="promotions common_layout clearfix">
       <%= render 'recommends/navbar' %>
+      <div class="admin">
+        <% if can? :update, @recommends %>
+         <%= link_to "Add Featured", new_recommend_path, :class => "filter-button" %>
+         <% if user_signed_in? %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, :class => "filter-button"%>
+         <% end %>
+        <% end %>
+      </div>
       <div class="filter-group guide_wrap">
         <%= render 'recommends/body' %>
       </div><!--./guide_wrap-->
