--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -46,6 +46,206 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="30" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jx6h4o"><img src="https://m.media-amazon.com/images/I/71UYMhM0GnL._SR400,400_.jpg" alt="Mossy Oak Stainless Steel Water Bottle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>53 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jx6h4o">Mossy Oak Stainless Steel Water Bottle - Leak-Proof Vacuum Insulated Cola Shape Bottle - Keeps Drinks...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>30% off at $29.99</strong> with promo code: <strong>30L8FFAE</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Jx6h4o">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="10.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NOknT1"><img src="https://m.media-amazon.com/images/I/61i2ugLa0-L._SR400,400_.jpg" alt="Hausbell flashlight" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>471 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NOknT1">Hausbell flashlight,Tactical Flashlight,LED Handheld Flashlights,Mini LED Flashlight,Zoomable,High Lumen Flashlights,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.79</span><span class="ori_price">$14.99</span></address>
+      <p><span>Take <strong>28% off at $14.99</strong> with promo code: <strong>28DX5MVE</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NOknT1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="61" data-price="9.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30tz92X"><img src="https://m.media-amazon.com/images/I/71C2HGm5KOL._SR400,400_.jpg" alt="PETRIP Bathing Tool Dog Massage Brush Pet Shower " /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>2 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>61% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30tz92X">PETRIP Bathing Tool Dog Massage Brush Pet Shower Sprayer Grooming Shedding Bath for Dog Cat Indoor Outdoor Use</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.75</span><span class="ori_price">$24.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>61% off at $24.99</strong> with promo code: <strong>61NRUA8F</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30tz92X">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30ufWOG"><img src="https://m.media-amazon.com/images/I/81cywYam7jL._SR400,400_.jpg" alt="Travel Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>4,990 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30ufWOG">Travel Laptop Backpack, Business Anti Theft Slim Durable Laptops Backpack with USB Charging Port,Water Resistant...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.99</span><span class="ori_price">$31.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>25% off at $31.99</strong> with promo code: <strong>25GCR2VA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30ufWOG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xGBfAj"><img src="https://m.media-amazon.com/images/I/51WvbA1WwDL._SR400,400_.jpg" alt="GREEN MOUNT 50ft Expandable Garden Hose" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>8 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xGBfAj">GREEN MOUNT 50ft Expandable Garden Hose, Lightweight Flexible Water Hose with 8 Function Spray Nozzle,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.39</span><span class="ori_price">$33.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>40% off at $33.99</strong> with promo code: <strong>40Q4CDOW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 03:00 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2xGBfAj">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xMUrwh"><img src="https://m.media-amazon.com/images/I/71mpz8GyIjL._SR400,400_.jpg" alt="Kamlui Laptop Bag 15.6 Inch" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>52 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xMUrwh">Kamlui Laptop Bag 15.6 Inch - for Women,PU Leather Canvas Shoulder Messenger Laptop Tote Bag Briefcase-for MacBook...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.99</span><span class="ori_price">$39.98</span></address>
+      <p><span>Take <strong>30% off at $39.98</strong> with promo code: <strong>301KKPQV</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2xMUrwh">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="23.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XYcXjX"><img src="https://m.media-amazon.com/images/I/712m024iAmL._SR400,400_.jpg" alt="Deik Personal Blender" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>122 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XYcXjX">Deik Personal Blender, Smoothie Blender 500 Watt with Travel Lid for Smoothies and Shakes, Coffee Grinder Cup...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.79</span><span class="ori_price">$33.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $33.99</strong> with promo code: <strong>30Z3E7GG</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 21, 2019 at 02:00 AM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XYcXjX">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XMFlS2"><img src="https://m.media-amazon.com/images/I/41+M3fwV4BL._SR400,400_.jpg" alt="Track Man Floating Waterproof" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>29 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XMFlS2">Track Man Floating Waterproof 2L/5L/15L/20L Premium PVC Waterproof Floating Dry Gear Bags for Boating, Kayaking,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>50% off at $15.99</strong> with promo code: <strong>50LE262U</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 12, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XMFlS2">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="197.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xMw9CA"><img src="https://m.media-amazon.com/images/I/71jsa0dtCyL._SR400,400_.jpg" alt="BNT 1080P PoE Security Camera System" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>12 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xMw9CA">BNT 1080P PoE Security Camera System, 8CH NVR 4 Camera, 7/24 Video Recording Onvif, Free APP Remote Monitor,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$197.99</span><span class="ori_price">$329.99</span></address>
+      <p><span>Take <strong>40% off at $329.99</strong> with promo code: <strong>407U1DG1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 12, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2xMw9CA">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XGkPaC"><img src="https://m.media-amazon.com/images/I/7137ObWevnL._SR400,400_.jpg" alt="TOPOKO Handmade 18.5 Oz Glass Water Bottle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>136 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XGkPaC">TOPOKO Handmade 18.5 Oz Glass Water Bottle-Extra Strong Crystal Glass Bottle Tea Cup with Tea Infuser Tea Strainer...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.59</span><span class="ori_price">$13.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>10% off at $13.99</strong> with promo code: <strong>10OFFTOPOKO</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XGkPaC">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="10.79">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LOlZtp"><img src="https://m.media-amazon.com/images/I/31KBL5rHARL._SR400,400_.jpg" alt="Poweriver USB Charging Station" /></a>
