--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -46,6 +46,147 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="35" data-price="25.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2l64tFv"><img src="https://m.media-amazon.com/images/I/61QYSiW1IgL._SR400,400_.jpg" alt="Letscom True Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>38 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2l64tFv">Letscom True Wireless Earbuds, Bluetooth 5.0 Headphones, 3D Stereo Sound, Mini in-Ear Sports Earphones for...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.99</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>35% off at $39.99</strong> with promo code: <strong>35J2OVWL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2l64tFv">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="10.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2jFPJwJ"><img src="https://m.media-amazon.com/images/I/61PAkdHvcPL._SR400,400_.jpg" alt="GRANDIX 3 in One Charging Dock" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>15 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2jFPJwJ">GRANDIX 3 in One Charging Dock for Apple Series Charger Docks Station for Airpods iWatch iPhone Android Smartphone...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.00</span><span class="ori_price">$25.00</span></address>
+      <p><span>Take <strong>60% off at $25.00</strong> with promo code: <strong>60Z3E517</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2jFPJwJ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2l8hMFC"><img src="https://m.media-amazon.com/images/I/71v8MtJUgwL._SR400,400_.jpg" alt="USB Wired Multimedia Keyboard" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>679 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2l8hMFC">Rii RK100 3 Colors LED Backlit Mechanical Feeling USB Wired Multimedia Keyboard For working or prime gaming</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50JIJIQS</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 07, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2l8hMFC">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="76.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2l8ImOX"><img src="https://m.media-amazon.com/images/I/610RiL-U6VL._SR400,400_.jpg" alt="Noise Cancelling Headphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>211 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2l8ImOX">TaoTronics Hybrid Active Noise Cancelling Headphones[2019 New Version] Bluetooth Headphones SoundSurge 46 Over...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$76.49</span><span class="ori_price">$89.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>15% off at $89.99</strong> with promo code: <strong>15ZXUNH7</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2l8ImOX">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="14.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2l7vxUX"><img src="https://images-na.ssl-images-amazon.com/images/I/71iXeMSGydL._SY679_.jpg" alt="100% All Natural & Organic Vitamin E Oil" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,434 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2l7vxUX">100% All Natural & Organic Vitamin E Oil For Your Face & Skin - 15,000/30,000 IU - Reduces Wrinkles, Lightens Dark Spots,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.98</span><span class="ori_price">$19.97</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>25% off at $19.97</strong> with promo code: <strong>25VITEDEAL</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 10, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2l7vxUX">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="14.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2l8kcnG"><img src="https://m.media-amazon.com/images/I/7164B1vlPvL._SR400,400_.jpg" alt="HISTOYE Outdoor Sprinkle Play Mat Summer Sprinklers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>60 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2l8kcnG">HISTOYE Outdoor Sprinkle Play Mat Summer Sprinklers for Yard Kids 63” Large Size Splash Pad for Toddler Outside...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.29</span><span class="ori_price">$21.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <p><span>Take <strong>35% off at $21.99</strong> with promo code: <strong>35R6UFMK</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 12, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2l8kcnG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="18.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2l7xeSj"><img src="https://m.media-amazon.com/images/I/51eH3jBU6KL._SR400,400_.jpg" alt="Amino VITAL Rapid Recovery" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>44 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2l7xeSj">Amino VITAL Rapid Recovery - Fermented Vegan BCAAs Amino Acid Powder + Complex Carbohydrates | BCAA, Glutamine...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.74</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>25% off at $24.99</strong> with promo code: <strong>25RECOVER</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 10, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2l7xeSj">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="20.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Jx6h4o"><img src="https://m.media-amazon.com/images/I/71UYMhM0GnL._SR400,400_.jpg" alt="Mossy Oak Stainless Steel Water Bottle" /></a>
