--- a/app/views/deals/_body_promotions.html.erb
+++ b/app/views/deals/_body_promotions.html.erb
@@ -29,6 +29,14 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Discover More</a></div>
 </div>
 
+<div class="filter-node promotion_box" data-filter='["promotions","Prime Member Coupons - Savings exclusively for Prime members"]'>
+  <a target="_blank" href="https://amzn.to/2lbMfmc"><img src="https://images.unsplash.com/photo-1561734269-cd857b8f2aa2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Prime Member Coupons"></a>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2lbMfmc">Prime Member Coupons - Savings exclusively for Prime members</a></h2>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2lbMfmc">Discover More</a></div>
+</div>
+
 <div class="filter-node promotion_box" data-filter='["sales","Up to 50% Off | Subscription & Discovery Boxes"]'>
   <div class="node-box inner">
     <h2><a target="_blank" href="https://amzn.to/2NQ7uaY">Up to 50% Off | Subscription & Discovery Boxes</a></h2>
