--- a/app/views/blogs/blog_02_amz_trial.html.erb
+++ b/app/views/blogs/blog_02_amz_trial.html.erb
@@ -11,7 +11,7 @@
           <p>Do you have account of Amazon? If you have it, you could upgrade to Amazon Prime and it's as easy as signing up your account in the first place. But if you’re new to Amazon, don’t worry, just follow the step-by-step instructions below.</p>
           <div class="inner_btn">
             <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
-            <a target="_blank" href="/blogs/blog_01">Amazon Prime Benefits</a>
+            <a target="_blank" href="/blogs/blog_01_amz_prime">Amazon Prime Benefits</a>
           </div>
           <!-- <img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime"> -->
         </div>
@@ -22,7 +22,7 @@
         
         <div class="blog_ctn">
           <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99FCCD4A5CD71D5109">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FH77B2%2FbtqwLT3yrZu%2FbbNKXo9MhFXYwiDis9vqnK%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.1</span>
@@ -33,7 +33,7 @@
 
         <div class="blog_ctn">
          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99FD1D4A5CD71D5209">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2Fdesm7S%2FbtqwMd8wB2O%2FuTbRIolh2mKcjTzVQ8WzK0%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.2</span>
@@ -43,7 +43,7 @@
 
         <div class="blog_ctn">
          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99FD4B4A5CD71D5209">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FHJ8cY%2FbtqwMJMVCNb%2FdIWIYJIOQZStzBb1kWHvbK%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.3</span>
@@ -54,7 +54,7 @@
 
         <div class="blog_ctn">
          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99FDA54A5CD71D5309">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbFXzQf%2FbtqwLeAnM4B%2FZ7oUXXqiA9gtGjNE23nJP0%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.4</span>
@@ -71,7 +71,7 @@
 
         <div class="blog_ctn">
           <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99FE9D4A5CD71D5309">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FtiVfp%2FbtqwJd90D1I%2FIq5ZvVTEaPb3KMUanWuOD1%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.1</span>
@@ -81,7 +81,7 @@
 
         <div class="blog_ctn">
          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99FEDB4A5CD71D5309">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FdQA0I2%2FbtqwMezDcmI%2FYKAl96Pf2t0w3LhZeLhWsK%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.2</span>
@@ -92,7 +92,7 @@
 
         <div class="blog_ctn">
          <div class="image_box size_con">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99FD9F4A5CD71D5409">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FdifpHF%2FbtqwMKdZBtj%2FarKWSD4K0gtsnok6zPwrKk%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.3</span>
@@ -102,7 +102,7 @@
 
         <div class="blog_ctn">
          <div class="image_box size_con">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99992F455CD71D5409">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbedW1Q%2FbtqwJd3dAqo%2FepaHZaS0n0nuPYnJX2UG2K%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.4</span>
@@ -112,7 +112,7 @@
 
         <div class="blog_ctn">
          <div class="image_box size_con">
-            <img src="https://t1.daumcdn.net/cfile/tistory/999955455CD71D5509">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbJmAkW%2FbtqwLS4CnQW%2FZAlv3CsNW7tKtMadPkilfk%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.5</span>
@@ -122,7 +122,7 @@
 
         <div class="blog_ctn">
          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99998E455CD71D5509">
+            <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2FbrWab3%2FbtqwJdoFy0s%2F1NlUZ5md9v5vmBlnzeoP7K%2Fimg.jpg">
           </div>
           <div class="inner">
             <span>STEP.6</span>
@@ -134,7 +134,7 @@
          <div class="blog_tit">
           <div class="inner_btn">
             <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
-            <a target="_blank" href="/blogs/blog_01">Amazon Prime Benefits</a>
+            <a target="_blank" href="/blogs/blog_01_amz_prime">Amazon Prime Benefits</a>
           </div>
         </div>
 
@@ -149,12 +149,3 @@
    </div><!--./warp-->
   </div><!--./blogs-->
 </div><!--./layout-->
-<% if can? :update, @gadgets %>
-  <div class="wrap">
-    <%= @lotto_1 %><br />
-    <%= @lotto_2 %><br />
-    <%= @lotto_3 %><br />
-    <%= @lotto_4 %><br />
-    <%= @lotto_5 %>
-  </div>
-<% end %>
