--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -52,6 +52,7 @@
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
   .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
   .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
+  .codes .card_wrap .card .inner>p>a>span{color:#08f;}
   .codes .card_wrap .card .inner>strong>a{color:#08f;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
