--- a/app/views/guides/guide_04.html.erb
+++ b/app/views/guides/guide_04.html.erb
@@ -7,11 +7,11 @@
   </div> -->
 
   <div class="guide_show_header" id="movie-card-list">
-    <div class="movie-card" data-section="marvel">
+    <div class="movie-card" data-section="mickey">
       <div class="movie-card__overlay"></div>                
       <div class="movie-card__content">
         <div class="movie-card__header">
-          <h1 class="movie-card__title gift_show_title">Gift for people who are CRAZY about MARVEL!</h1>
+          <h1 class="movie-card__title gift_show_title">Gift for people who are CRAZY about Mickey Mouse</h1>
         </div>
       </div>
     </div>
@@ -36,11 +36,11 @@
       </div> -->
 
       <div class="column_box last_column_box">
-        <div class="flex column" onclick="currentSlide(1)">
-          <img src="https://images-na.ssl-images-amazon.com/images/I/81P3mjM2BFL._SX679_.jpg">
+        <div class="flex column" onclick="currentSlide(Page_Number)">
+          <img src="Image_URL">
         </div>
-        <div class="flex column" onclick="currentSlide(2)">
-          <img src="https://images-na.ssl-images-amazon.com/images/I/61Ng6ywPvVL._SX522_.jpg">
+        <div class="flex column" onclick="currentSlide(Page_Number)">
+          <img src="Image_URL">
         </div>
         <div class="flex column" onclick="currentSlide(Page_Number)">
           <img src="Image_URL">
@@ -75,40 +75,37 @@
           </div>
         </div> -->
 
-        <div class="flex slides clearfix">
-          <div class="numbering">1 / Total_Page</div>
+         <div class="flex slides clearfix">
+          <div class="numbering">Current_Page / Total_Page</div>
           <div class="inner_wrap">
             <div class="img_box">
-             <a target="_blank" href="https://amzn.to/2LERvtM"><img src="https://images-na.ssl-images-amazon.com/images/I/81P3mjM2BFL._SX679_.jpg" alt="Marvel MVA-278 Captain America Waffle Make"></a>
+             <a target="_blank" href="Product_URL"><img src="Image_URL"></a>
             </div>
             <div class="inner">
-              <h2><a href="https://amzn.to/2LERvtM">Marvel MVA-278 Captain America Waffle Maker</a></h2>
-              <strong>BY Amazon</strong>
-              <div class="pricing">
-                <em>$39.99</em>
-                <p>$25.19 (37% OFF)</p>
-              </div>
+              <h2><a href="Product_URL">Image_Title</a></h2>
+              <strong>BY Product_Source</strong>
+              <em>$Reg_Price</em>
+              <p>$Current_Price (Percentage% OFF)</p>
               <div class="btn">
-                <a href="https://amzn.to/2LERvtM">Check it Out on <span>Amazon</span></a>
+                <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="flex slides clearfix">
-          <div class="numbering">2 / Total_Page</div>
+          <div class="numbering">Current_Page / Total_Page</div>
           <div class="inner_wrap">
             <div class="img_box">
-             <a target="_blank" href="https://amzn.to/2jWzPyg"><img src="https://images-na.ssl-images-amazon.com/images/I/61Ng6ywPvVL._SX522_.jpg"></a>
+             <a target="_blank" href="Product_URL"><img src="Image_URL"></a>
             </div>
             <div class="inner">
-              <h2><a href="https://amzn.to/2jWzPyg">MK42 Wearable Arc FX Wrist Armor Gauntlet</a></h2>
-              <strong>BY Gmasking</strong>
-              <div class="pricing">
-               <p>$399.98</p>
-              </div>
+              <h2><a href="Product_URL">Image_Title</a></h2>
+              <strong>BY Product_Source</strong>
+              <em>$Reg_Price</em>
+              <p>$Current_Price (Percentage% OFF)</p>
               <div class="btn">
-                <a href="https://amzn.to/2jWzPyg">Check it Out on <span>Amazon</span></a>
+                <a href="Product_URL">Check it Out on <span>Product_Source</span></a>
               </div>
             </div>
           </div>
