--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -47,6 +47,25 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ljJlvA"><img src="https://images-na.ssl-images-amazon.com/images/I/61uvVQPLIuL._SX522_.jpg" alt="Yicostar Dog Water Bottle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>25 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ljJlvA">Yicostar Dog Water Bottle for Walking, 20 Oz Travel Pet Water Bottle with Collapsible Dog Bowl and Potty Waste Bag Dispenser...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$24.99</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ljJlvA">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="53" data-price="139.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2l8D4ms"><img src="https://images-na.ssl-images-amazon.com/images/I/71sBjbHYbKL._SY606_.jpg" alt="Beats Solo3 Wireless On-Ear Headphones" /></a>
@@ -397,7 +416,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30tNCMc">Logitech G502 Proteus Spectrum RGB Tunable Gaming Mouse, 12,000 DPI On-The-Fly DPI Shifting, Personalized...</a></p>
     <div class="code_high">
-      <address><span class="dis_price bestdeals">$discounted_price</span><span class="ori_price">$84.99</span></address>
+      <address><span class="dis_price bestdeals">$34.99</span><span class="ori_price">$84.99</span></address>
       <%= render 'deals/notes' %>
     </div>
   </div> 
