--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -25,6 +25,15 @@
           <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
         </div> -->
 
+        <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about Mickey Mouse"]'>
+          <div class="image_box"><a href="/guides/guide_04"><img src="https://images.unsplash.com/photo-1528066588405-9e20509b9e34?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="mickeymouse"></a></div>
+          <div class="node-box inner">
+            <h2><a href="/guides/guide_04">Gift for people who are CRAZY about Mickey Mouse</a></h2>
+            <span>Last Updated: Mon. Day. 2019</span>
+          </div>
+          <div class="btn"><a href="/guides/guide_04">Read More</a></div>
+        </div>
+
         <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about BATMAN!"]'>
           <div class="image_box"><a href="/guides/guide_02"><img src="https://images.unsplash.com/photo-1497124401559-3e75ec2ed794?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="batman"></a></div>
           <div class="node-box inner">
